SUBDIRS = menu icons buttons spinner fonts pictures skin_default

installdir = $(pkgdatadir)/skin_default

dist_install_DATA = \
	1.png \
	arrowdown.png \
	arrowup.png \
	bar_agc.png \
	bar_ber.png \
	bar_big.png \
	bar_snr2.png \
	bar_snr.png \
	b_bl.png \
	b_b.png \
	b_br.png \
	blank.png \
	b_lr.png \
	blue.png \
	border_epg.png \
	border_eventinfo.png \
	border_info.png \
	border_menu_300.png \
	border_menu_350.png \
	border_menu.png \
	border_multiepg.png \
	b_tl.png \
	b_t.png \
	b_tr.png \
	celserviceeventprogressbar.png \
	div-h.png \
	div-v.png \
	epg_more.png \
	epg_next.png \
	epg_now.png \
	expandable-plugins.png \
	expanded-plugins.png \
	extra.png \
	green.png \
	infobar.png \
	mainbg.png \
	mp_buttons.png \
	mute.png \
	nim_active.png \
	no_coverArt.png \
	picon_default.png \
	pointer.png \
	position_arrow.png \
	position_pointer.png \
	prev.png \
	progress_bg.png \
	progress_big.png \
	progress_medium.png \
	progressmp.png \
	progress.png \
	progress_small.png \
	red.png \
	repeat_off.png \
	repeat_on.png \
	screws_mp.png \
	screws.png \
	starbg.png \
	star.png \
	strip.png \
	tech9.png \
	timeline-now.png \
	timeline.png \
	tsbg.png \
	unhandled-key.png \
	unhand.png \
	verticalline-plugins.png \
	vkey_backspace.png \
	vkey_bg.png \
	vkey_clr.png \
	vkey_esc.png \
	vkey_icon.png \
	vkey_left.png \
	vkey_ok.png \
	vkey_right.png \
	vkey_sel.png \
	vkey_shift.png \
	vkey_shift_sel.png \
	vkey_space.png \
	vkey_text.png \
	vol_back.png \
	vol.png \
	wizard.png \
	yellow.png