installdir = $(pkgdatadir)/skin_default/buttons

dist_install_DATA = \
	blue.png \
	button_blue_off.png \
	button_blue.png \
	button_green_off.png \
	button_green.png \
	button_red_off.png \
	button_red.png \
	button_yellow_off.png \
	button_yellow.png \
	green.png \
	grey.png \
	icon1.png \
	info.png \
	left.png \
	menu.png \
	pvr.png \
	red.png \
	right.png \
	text.png \
	yellow.png