installdir = $(pkgdatadir)/skin_default/icons

dist_install_DATA = \
	dish.png \
	ico_crypt_off.png \
	ico_crypt_on.png \
	ico_dolby_off.png \
	ico_dolby_on.png \
	ico_format_off.png \
	ico_format_on.png \
	ico_hbbtv_off.png \
	ico_hbbtv_on.png \
	ico_hd_off.png \
	ico_hd_on.png \
	icon_event.png \
	ico_rec_on.png \
	ico_txt_off.png \
	ico_txt_on.png \
	plugin.png