installdir = $(pkgdatadir)/skin_default/spinner

dist_install_DATA = \
	wait1.png \
	wait2.png \
	wait3.png \
	wait4.png \
	wait5.png \
	wait6.png \
	wait7.png \
	wait8.png \
	wait9.png \
	wait10.png \
	wait11.png \
	wait12.png \
	wait13.png \
	wait14.png \
	wait15.png \
	wait16.png \
	wait17.png \
	wait18.png \
	wait19.png \
	wait20.png \
	wait21.png \
	wait22.png \
	wait23.png \
	wait24.png \
	wait25.png \
	wait26.png \
	wait27.png \
	wait28.png \
	wait29.png \
	wait30.png 