installdir = $(pkglibdir)/python/Plugins/Extensions/OpenXtaReader/pic

SUBDIRS = buttons

dist_install_DATA = \
	forum_new-48.png \
	forum_old-48.png \
	info.png \
	info_white.png \
	line_gray.png \
	line_white.png \
	thread_new-30.png \
	thread_old-30.png \
	thread_sticky-30.png \
	XtrendHD.png \
	XtrendHD_white.png \
	Xtrend.png \
	Xtrend_white.png